crates/spelldawn/tests/it/core/snapshots/it__core__create_game_tests__create_new_game.snap
---
source: crates/spelldawn/tests/it/core/create_game_tests.rs
assertion_line: 53
expression: "Summary::run(&response)"
---

command_list: 
    RenderScreenOverlay: "<ScreenOverlay>"
